svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fvtt-svc
  namespace: foundry-vtt
  labels:
   app: foundry
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 30000
    protocol: TCP
  selector:
    app: foundry
